@@ -18,9 +18,8 @@ import com.intellij.codeInsight.intention.impl.*;
 import com.intellij.codeInspection.*;
 import com.intellij.codeInspection.actions.UnimplementInterfaceAction;
 import com.intellij.codeInspection.dataFlow.fix.DeleteSwitchLabelFix;
-import com.intellij.codeInspection.deadCode.UnusedDeclarationInspectionBase;
 import com.intellij.codeInspection.ex.EntryPointsManagerBase;
-import com.intellij.codeInspection.unusedSymbol.UnusedSymbolLocalInspectionBase;
+import com.intellij.codeInspection.ex.InspectionToolWrapper;
 import com.intellij.codeInspection.util.IntentionName;
 import com.intellij.codeInspection.util.SpecialAnnotationsUtil;
 import com.intellij.diagnostic.CoreAttachmentFactory;
@@ -29,6 +28,9 @@ import com.intellij.java.JavaBundle;
 import com.intellij.lang.annotation.HighlightSeverity;
 import com.intellij.lang.java.request.CreateConstructorFromUsage;
 import com.intellij.lang.java.request.CreateMethodFromUsage;
+import com.intellij.modcommand.ActionContext;
+import com.intellij.modcommand.ModCommandAction;
+import com.intellij.modcommand.Presentation;
 import com.intellij.openapi.application.ApplicationManager;
 import com.intellij.openapi.diagnostic.Logger;
 import com.intellij.openapi.editor.Document;
@@ -41,6 +43,7 @@ import com.intellij.openapi.util.TextRange;
 import com.intellij.openapi.vfs.NonPhysicalFileSystem;
 import com.intellij.openapi.vfs.VirtualFile;
 import com.intellij.pom.java.LanguageLevel;
+import com.intellij.profile.codeInspection.InspectionProfileManager;
 import com.intellij.psi.*;
 import com.intellij.psi.tree.IElementType;
 import com.intellij.psi.util.ClassKind;
@@ -52,6 +55,7 @@ import com.intellij.util.DocumentUtil;
 import com.intellij.util.IncorrectOperationException;
 import com.intellij.util.ObjectUtils;
 import com.intellij.util.ThreeState;
+import com.intellij.util.concurrency.ThreadingAssertions;
 import com.siyeh.ig.controlflow.UnnecessaryDefaultInspection;
 import com.siyeh.ig.fixes.*;
 import com.siyeh.ipp.modifiers.ChangeModifierIntention;
@@ -60,7 +64,6 @@ import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
 import java.util.*;
-import java.util.function.Function;
 
 public final class QuickFixFactoryImpl extends QuickFixFactory {
   private static final Logger LOG = Logger.getInstance(QuickFixFactoryImpl.class);
@@ -132,9 +135,10 @@ public final class QuickFixFactoryImpl extends QuickFixFactory {
                                                          @NotNull PsiClassType exceptionClass,
                                                          boolean shouldThrow,
                                                          boolean showContainingClass) {
-    return shouldThrow
-           ? new MethodThrowsFix.Add(method, exceptionClass, showContainingClass)
-           : new MethodThrowsFix.Remove(method, exceptionClass, showContainingClass);
+    ModCommandAction action = shouldThrow
+                              ? new MethodThrowsFix.Add(method, exceptionClass, showContainingClass)
+                              : new MethodThrowsFix.Remove(method, exceptionClass, showContainingClass);
+    return LocalQuickFixAndIntentionActionOnPsiElement.from(action, method);
   }
 
   @NotNull
@@ -169,7 +173,7 @@ public final class QuickFixFactoryImpl extends QuickFixFactory {
   @NotNull
   @Override
   public IntentionAction createRemoveUnusedVariableFix(@NotNull PsiVariable variable) {
-    return new RemoveUnusedVariableFix(variable);
+    return new RemoveUnusedVariableFix(variable).asIntention();
   }
 
   @Override
@@ -197,7 +201,7 @@ public final class QuickFixFactoryImpl extends QuickFixFactory {
                                                         @NotNull PsiType type,
                                                         @NotNull PropertyMemberType targetMember,
                                                         PsiAnnotation @NotNull ... annotations) {
-    return new CreateFieldOrPropertyFix(aClass, name, type, targetMember, annotations);
+    return new CreateFieldOrPropertyFix(aClass, name, type, targetMember, annotations).asIntention();
   }
 
   @NotNull
@@ -221,7 +225,7 @@ public final class QuickFixFactoryImpl extends QuickFixFactory {
   @NotNull
   @Override
   public IntentionAction createSurroundWithTryCatchFix(@NotNull PsiElement element) {
-    return new SurroundWithTryCatchFix(element);
+    return new SurroundWithTryCatchFix(element).asIntention();
   }
 
   @NotNull
@@ -277,25 +281,25 @@ public final class QuickFixFactoryImpl extends QuickFixFactory {
   @NotNull
   @Override
   public IntentionAction createDeleteCatchFix(@NotNull PsiParameter parameter) {
-    return new DeleteCatchFix(parameter);
+    return new DeleteCatchFix(parameter).asIntention();
   }
 
   @NotNull
   @Override
   public IntentionAction createDeleteMultiCatchFix(@NotNull PsiTypeElement element) {
-    return new DeleteMultiCatchFix(element);
+    return new DeleteMultiCatchFix(element).asIntention();
   }
 
   @NotNull
   @Override
   public IntentionAction createConvertSwitchToIfIntention(@NotNull PsiSwitchStatement statement) {
-    return new ConvertSwitchToIfIntention(statement);
+    return new ConvertSwitchToIfIntention(statement).asIntention();
   }
 
   @NotNull
   @Override
   public IntentionAction createNegationBroadScopeFix(@NotNull PsiPrefixExpression expr) {
-    return new NegationBroadScopeFix(expr);
+    return new NegationBroadScopeFix(expr).asIntention();
   }
 
   @NotNull
@@ -307,7 +311,7 @@ public final class QuickFixFactoryImpl extends QuickFixFactory {
   @NotNull
   @Override
   public IntentionAction createReplaceWithListAccessFix(@NotNull PsiArrayAccessExpression expression) {
-    return new ReplaceWithListAccessFix(expression);
+    return new ReplaceWithListAccessFix(expression).asIntention();
   }
 
   @NotNull
@@ -319,7 +323,7 @@ public final class QuickFixFactoryImpl extends QuickFixFactory {
   @NotNull
   @Override
   public IntentionAction createMoveCatchUpFix(@NotNull PsiCatchSection section, @NotNull PsiCatchSection section1) {
-    return new MoveCatchUpFix(section, section1);
+    return new MoveCatchUpFix(section, section1).asIntention();
   }
 
   @NotNull
@@ -333,13 +337,13 @@ public final class QuickFixFactoryImpl extends QuickFixFactory {
   public IntentionAction createRemoveQualifierFix(@NotNull PsiExpression qualifier,
                                                   @NotNull PsiReferenceExpression expression,
                                                   @NotNull PsiClass resolved) {
-    return new RemoveQualifierFix(qualifier, expression, resolved);
+    return new RemoveQualifierFix(expression, resolved).asIntention();
   }
 
   @NotNull
   @Override
   public IntentionAction createRemoveParameterListFix(@NotNull PsiMethod parent) {
-    return new RemoveParameterListFix(parent);
+    return new RemoveParameterListFix(parent).asIntention();
   }
 
   @NotNull
@@ -372,16 +376,16 @@ public final class QuickFixFactoryImpl extends QuickFixFactory {
 
   @NotNull
   @Override
-  public IntentionAction createReplaceInaccessibleFieldWithGetterSetterFix(@NotNull PsiElement element,
+  public IntentionAction createReplaceInaccessibleFieldWithGetterSetterFix(@NotNull PsiReferenceExpression element,
                                                                            @NotNull PsiMethod getter,
                                                                            boolean isSetter) {
-    return new ReplaceInaccessibleFieldWithGetterSetterFix(element, getter, isSetter);
+    return new ReplaceInaccessibleFieldWithGetterSetterFix(element, getter, isSetter).asIntention();
   }
 
   @NotNull
   @Override
   public IntentionAction createSurroundWithArrayFix(@Nullable PsiCall methodCall, @Nullable PsiExpression expression) {
-    return new SurroundWithArrayFix(methodCall, expression);
+    return new SurroundWithArrayFix(methodCall, expression).asIntention();
   }
 
   @NotNull
@@ -393,7 +397,7 @@ public final class QuickFixFactoryImpl extends QuickFixFactory {
   @NotNull
   @Override
   public IntentionAction createMoveClassToSeparateFileFix(@NotNull PsiClass aClass) {
-    return new MoveClassToSeparateFileFix(aClass);
+    return new MoveClassToSeparateFileFix(aClass).asIntention();
   }
 
   @NotNull
@@ -434,7 +438,7 @@ public final class QuickFixFactoryImpl extends QuickFixFactory {
   @NotNull
   @Override
   public IntentionAction createChangeExtendsToImplementsFix(@NotNull PsiClass aClass, @NotNull PsiClassType classToExtendFrom) {
-    return new ChangeExtendsToImplementsFix(aClass, classToExtendFrom);
+    return new ChangeExtendsToImplementsFix(aClass, classToExtendFrom).asIntention();
   }
 
   @NotNull
@@ -446,7 +450,7 @@ public final class QuickFixFactoryImpl extends QuickFixFactory {
   @NotNull
   @Override
   public IntentionAction createRemoveNewQualifierFix(@NotNull PsiNewExpression expression, PsiClass aClass) {
-    return new RemoveNewQualifierFix(expression, aClass);
+    return new RemoveNewQualifierFix(expression, aClass).asIntention();
   }
 
   @NotNull
@@ -458,37 +462,37 @@ public final class QuickFixFactoryImpl extends QuickFixFactory {
   @NotNull
   @Override
   public IntentionAction createInsertNewFix(@NotNull PsiMethodCallExpression call, @NotNull PsiClass aClass) {
-    return new InsertNewFix(call, aClass);
+    return new InsertNewFix(call, aClass).asIntention();
   }
 
   @NotNull
   @Override
   public IntentionAction createAddMethodBodyFix(@NotNull PsiMethod method) {
-    return new AddMethodBodyFix(method);
+    return new AddMethodBodyFix(method).asIntention();
   }
 
   @NotNull
   @Override
   public IntentionAction createAddMethodBodyFix(@NotNull PsiMethod method, @NotNull @Nls String text) {
-    return new AddMethodBodyFix(method, text);
+    return new AddMethodBodyFix(method, text).asIntention();
   }
 
   @NotNull
   @Override
   public IntentionAction createDeleteMethodBodyFix(@NotNull PsiMethod method) {
-    return new DeleteMethodBodyFix(method);
+    return new DeleteMethodBodyFix(method).asIntention();
   }
 
   @NotNull
   @Override
   public IntentionAction createInsertSuperFix(@NotNull PsiMethod constructor) {
-    return new InsertSuperFix(constructor);
+    return new InsertSuperFix(constructor).asIntention();
   }
 
   @NotNull
   @Override
   public IntentionAction createInsertThisFix(@NotNull PsiMethod constructor) {
-    return new InsertThisFix(constructor);
+    return new InsertThisFix(constructor).asIntention();
   }
 
   @NotNull
@@ -540,7 +544,7 @@ public final class QuickFixFactoryImpl extends QuickFixFactory {
   public @NotNull IntentionAction createReplaceWithTypePatternFix(@NotNull PsiReferenceExpression exprToReplace,
                                                                   @NotNull PsiClass resolvedExprClass,
                                                                   @NotNull String patternVarName) {
-    return new ReplaceWithTypePatternFix(exprToReplace, resolvedExprClass, patternVarName);
+    return new ReplaceWithTypePatternFix(exprToReplace, resolvedExprClass, patternVarName).asIntention();
   }
 
   @NotNull
@@ -558,7 +562,7 @@ public final class QuickFixFactoryImpl extends QuickFixFactory {
   @NotNull
   @Override
   public IntentionAction createReplaceAddAllArrayToCollectionFix(@NotNull PsiMethodCallExpression call) {
-    return new ReplaceAddAllArrayToCollectionFix(call);
+    return new ReplaceAddAllArrayToCollectionFix(call).asIntention();
   }
 
   @NotNull
@@ -582,13 +586,13 @@ public final class QuickFixFactoryImpl extends QuickFixFactory {
   @NotNull
   @Override
   public IntentionAction createAddVariableInitializerFix(@NotNull PsiVariable variable) {
-    return new AddVariableInitializerFix(variable);
+    return new AddVariableInitializerFix(variable).asIntention();
   }
 
   @NotNull
   @Override
   public IntentionAction createDeferFinalAssignmentFix(@NotNull PsiVariable variable, @NotNull PsiReferenceExpression expression) {
-    return new DeferFinalAssignmentFix(variable, expression);
+    return new DeferFinalAssignmentFix(variable, expression).asIntention();
   }
 
   @NotNull
@@ -600,13 +604,13 @@ public final class QuickFixFactoryImpl extends QuickFixFactory {
   @NotNull
   @Override
   public IntentionAction createCreateConstructorParameterFromFieldFix(@NotNull PsiField field) {
-    return new CreateConstructorParameterFromFieldFix(field);
+    return new CreateConstructorParameterFromFieldFix(field).asIntention();
   }
 
   @NotNull
   @Override
   public IntentionAction createInitializeFinalFieldInConstructorFix(@NotNull PsiField field) {
-    return new InitializeFinalFieldInConstructorFix(field);
+    return new InitializeFinalFieldInConstructorFix(field).asIntention();
   }
 
   @NotNull
@@ -620,7 +624,7 @@ public final class QuickFixFactoryImpl extends QuickFixFactory {
   public IntentionAction createReplacePrimitiveWithBoxedTypeAction(@NotNull PsiTypeElement element,
                                                                    @NotNull String typeName,
                                                                    @NotNull String boxedTypeName) {
-    return new ReplacePrimitiveWithBoxedTypeAction(element, typeName, boxedTypeName);
+    return new ReplacePrimitiveWithBoxedTypeAction(element, typeName, boxedTypeName).asIntention();
   }
 
   @Nullable
@@ -638,7 +642,7 @@ public final class QuickFixFactoryImpl extends QuickFixFactory {
   @NotNull
   @Override
   public IntentionAction createMakeVarargParameterLastFix(@NotNull PsiVariable parameter) {
-    return new MakeVarargParameterLastFix(parameter);
+    return new MakeVarargParameterLastFix(parameter).asIntention();
   }
 
   @NotNull
@@ -723,12 +727,11 @@ public final class QuickFixFactoryImpl extends QuickFixFactory {
   public @NotNull IntentionAction createSafeDeleteUnusedParameterInHierarchyFix(@NotNull PsiParameter parameter,
                                                                                 boolean excludingHierarchy) {
     if (excludingHierarchy) {
-      Function<InspectionProfileEntry, InspectionProfileEntry> extractor =
-        profileEntry -> profileEntry instanceof UnusedDeclarationInspectionBase
-                        ? ((UnusedDeclarationInspectionBase)profileEntry).getSharedLocalInspectionTool()
-                        : profileEntry;
-      return SetInspectionOptionFix.createFix(UnusedSymbolLocalInspectionBase.SHORT_NAME, "myCheckParameterExcludingHierarchy",
-                                              JavaErrorBundle.message("parameter.excluding.hierarchy.disable.text"), false, extractor);
+      InspectionToolWrapper<?, ?> toolWrapper = Objects.requireNonNull(InspectionProfileManager.getInstance(parameter.getProject())
+                                                                         .getCurrentProfile().getInspectionTool("unused", parameter));
+      InspectionProfileEntry tool = toolWrapper.getTool();
+      return new UpdateInspectionOptionFix(tool, "members.myCheckParameterExcludingHierarchy",
+        JavaErrorBundle.message("parameter.excluding.hierarchy.disable.text"), false).asIntention();
     }
     else {
       return new SafeDeleteFix(parameter);
@@ -775,18 +778,18 @@ public final class QuickFixFactoryImpl extends QuickFixFactory {
   @NotNull
   @Override
   public LocalQuickFixAndIntentionActionOnPsiElement createDeleteFix(@NotNull PsiElement element) {
-    return new DeleteElementFix(element);
+    return LocalQuickFixAndIntentionActionOnPsiElement.from(new DeleteElementFix(element), element);
   }
 
   @Override
   public @NotNull IntentionAction createDeleteFix(@NotNull PsiElement @NotNull ... elements) {
-    return new DeleteElementFix.DeleteMultiFix(elements);
+    return new DeleteElementFix.DeleteMultiFix(elements).asIntention();
   }
 
   @NotNull
   @Override
   public LocalQuickFixAndIntentionActionOnPsiElement createDeleteFix(@NotNull PsiElement element, @Nls @NotNull String text) {
-    return new DeleteElementFix(element, text);
+    return LocalQuickFixAndIntentionActionOnPsiElement.from(new DeleteElementFix(element, text), element);
   }
 
   @NotNull
@@ -823,20 +826,20 @@ public final class QuickFixFactoryImpl extends QuickFixFactory {
   public IntentionAction createAddMissingRequiredAnnotationParametersFix(@NotNull final PsiAnnotation annotation,
                                                                          final PsiMethod @NotNull [] annotationMethods,
                                                                          @NotNull final Collection<String> missedElements) {
-    return new AddMissingRequiredAnnotationParametersFix(annotation, annotationMethods, missedElements);
+    return new AddMissingRequiredAnnotationParametersFix(annotation, annotationMethods, missedElements).asIntention();
   }
 
   @NotNull
   @Override
   public IntentionAction createSurroundWithQuotesAnnotationParameterValueFix(@NotNull PsiAnnotationMemberValue value,
                                                                              @NotNull PsiType expectedType) {
-    return new SurroundWithQuotesAnnotationParameterValueFix(value, expectedType);
+    return new SurroundWithQuotesAnnotationParameterValueFix(value, expectedType).asIntention();
   }
 
   @NotNull
   @Override
   public IntentionAction addMethodQualifierFix(@NotNull PsiMethodCallExpression methodCall) {
-    return new AddMethodQualifierFix(methodCall);
+    return new AddMethodQualifierFix(methodCall).asIntention();
   }
 
   @NotNull
@@ -849,10 +852,10 @@ public final class QuickFixFactoryImpl extends QuickFixFactory {
   @Override
   public IntentionAction createNotIterableForEachLoopFix(@NotNull PsiExpression expression) {
     final PsiElement parent = expression.getParent();
-    if (parent instanceof PsiForeachStatement) {
+    if (parent instanceof PsiForeachStatement forEach) {
       final PsiType type = expression.getType();
       if (InheritanceUtil.isInheritor(type, CommonClassNames.JAVA_UTIL_ITERATOR)) {
-        return new ReplaceIteratorForEachLoopWithIteratorForLoopFix((PsiForeachStatement)parent);
+        return new ReplaceIteratorForEachLoopWithIteratorForLoopFix(forEach).asIntention();
       }
     }
     return null;
@@ -865,7 +868,7 @@ public final class QuickFixFactoryImpl extends QuickFixFactory {
   }
 
   private static boolean timeToOptimizeImports(@NotNull PsiFile file, boolean isInContent, @NotNull ThreeState extensionsAllowToChangeFileSilently) {
-    ApplicationManager.getApplication().assertIsDispatchThread();
+    ThreadingAssertions.assertEventDispatchThread();
     if (!CodeInsightWorkspaceSettings.getInstance(file.getProject()).isOptimizeImportsOnTheFly()) {
       return false;
     }
@@ -904,20 +907,20 @@ public final class QuickFixFactoryImpl extends QuickFixFactory {
   public IntentionAction createCollectionToArrayFix(@NotNull PsiExpression collectionExpression,
                                                     @NotNull PsiExpression expressionToReplace,
                                                     @NotNull PsiArrayType arrayType) {
-    return new ConvertCollectionToArrayFix(collectionExpression, expressionToReplace, arrayType);
+    return new ConvertCollectionToArrayFix(collectionExpression, expressionToReplace, arrayType).asIntention();
   }
 
   @NotNull
   @Override
   public IntentionAction createInsertMethodCallFix(@NotNull PsiMethodCallExpression call, @NotNull PsiMethod method) {
-    return new InsertMethodCallFix(call, method);
+    return new InsertMethodCallFix(call, method).asIntention();
   }
 
   @NotNull
   @Override
   public LocalQuickFixAndIntentionActionOnPsiElement createAccessStaticViaInstanceFix(@NotNull PsiReferenceExpression methodRef,
                                                                                       @NotNull JavaResolveResult result) {
-    return new AccessStaticViaInstanceFix(methodRef, result, true);
+    return LocalQuickFixAndIntentionActionOnPsiElement.from(new AccessStaticViaInstanceFix(methodRef, result), methodRef);
   }
 
   @NotNull
@@ -960,7 +963,7 @@ public final class QuickFixFactoryImpl extends QuickFixFactory {
   @NotNull
   @Override
   public IntentionAction createAddMissingEnumBranchesFix(@NotNull PsiSwitchBlock switchBlock, @NotNull Set<String> missingCases) {
-    return new CreateEnumMissingSwitchBranchesFix(switchBlock, missingCases);
+    return new CreateEnumMissingSwitchBranchesFix(switchBlock, missingCases).asIntention();
   }
 
   @NotNull
@@ -968,7 +971,7 @@ public final class QuickFixFactoryImpl extends QuickFixFactory {
   public IntentionAction createAddMissingSealedClassBranchesFix(@NotNull PsiSwitchBlock switchBlock,
                                                                 @NotNull Set<String> missingCases,
                                                                 @NotNull List<String> allNames) {
-    return new CreateSealedClassMissingSwitchBranchesFix(switchBlock, missingCases, allNames);
+    return new CreateSealedClassMissingSwitchBranchesFix(switchBlock, missingCases, allNames).asIntention();
   }
 
   @Nullable
@@ -977,13 +980,15 @@ public final class QuickFixFactoryImpl extends QuickFixFactory {
                                                                 @NotNull PsiClass selectorType,
                                                                 @NotNull Map<PsiType, Set<List<PsiType>>> branches,
                                                                 @NotNull List<? extends PsiCaseLabelElement> elements) {
-    return CreateMissingDeconstructionRecordClassBranchesFix.create(switchBlock, selectorType, branches, elements);
+    CreateMissingDeconstructionRecordClassBranchesFix fix =
+      CreateMissingDeconstructionRecordClassBranchesFix.create(switchBlock, selectorType, branches, elements);
+    return fix == null ? null : fix.asIntention();
   }
 
   @NotNull
   @Override
   public IntentionAction createAddSwitchDefaultFix(@NotNull PsiSwitchBlock switchBlock, @IntentionName String message) {
-    return new CreateDefaultBranchFix(switchBlock, message);
+    return new CreateDefaultBranchFix(switchBlock, message).asIntention();
   }
 
   @Nullable
@@ -1001,7 +1006,7 @@ public final class QuickFixFactoryImpl extends QuickFixFactory {
   @NotNull
   @Override
   public IntentionAction createWrapSwitchRuleStatementsIntoBlockFix(@NotNull PsiSwitchLabeledRuleStatement rule) {
-    return new WrapSwitchRuleStatementsIntoBlockFix(rule);
+    return new WrapSwitchRuleStatementsIntoBlockFix(rule).asIntention();
   }
 
   @NotNull
@@ -1023,7 +1028,7 @@ public final class QuickFixFactoryImpl extends QuickFixFactory {
 
   @Override
   public @NotNull IntentionAction createAssignFieldFromParameterFix() {
-    return new AssignFieldFromParameterAction(true);
+    return new AssignFieldFromParameterAction(true).asIntention();
   }
 
   @Override
@@ -1046,27 +1051,28 @@ public final class QuickFixFactoryImpl extends QuickFixFactory {
   public @NotNull List<IntentionAction> createExtendSealedClassFixes(@NotNull PsiJavaCodeReferenceElement subclassRef,
                                                                      @NotNull PsiClass parentClass,
                                                                      @NotNull PsiClass subClass) {
-    return Arrays.asList(ImplementOrExtendFix.createActions(subClass, parentClass));
+    ModCommandAction fix = ImplementOrExtendFix.createFix(subClass, parentClass);
+    return fix == null ? List.of() : List.of(fix.asIntention());
   }
 
   @Override
   public @NotNull IntentionAction createSealClassFromPermitsListFix(@NotNull PsiClass classFromPermitsList) {
-    return new SealClassFromPermitsListAction(classFromPermitsList);
+    return new SealClassFromPermitsListAction(classFromPermitsList).asIntention();
   }
 
   @Override
   public @NotNull IntentionAction createRemoveDuplicateExtendsAction(@NotNull String className) {
-    return new UnimplementInterfaceAction.RemoveDuplicateExtendFix(className);
+    return new UnimplementInterfaceAction.RemoveDuplicateExtendFix(className).asIntention();
   }
 
   @Override
   public @NotNull IntentionAction createMoveMemberIntoClassFix(@NotNull PsiErrorElement errorElement) {
-    return new MoveMemberIntoClassFix(errorElement);
+    return new MoveMemberIntoClassFix(errorElement).asIntention();
   }
 
   @Override
   public @NotNull IntentionAction createReceiverParameterTypeFix(@NotNull PsiReceiverParameter parameter, @NotNull PsiType newType) {
-    return new ReceiverParameterTypeFix(parameter, newType);
+    return new ReceiverParameterTypeFix(parameter, newType).asIntention();
   }
 
   private final static class ReceiverParameterTypeFix extends SetVariableTypeFix {
@@ -1075,7 +1081,7 @@ public final class QuickFixFactoryImpl extends QuickFixFactory {
     }
 
     @Override
-    public @NotNull String getText() {
+    protected @NotNull String getText() {
       return QuickFixBundle.message("fix.receiver.parameter.type.text");
     }
 
@@ -1087,13 +1093,14 @@ public final class QuickFixFactoryImpl extends QuickFixFactory {
 
   @Override
   public @NotNull IntentionAction createConvertInterfaceToClassFix(@NotNull PsiClass aClass) {
-    return new ConvertInterfaceToClassFix(aClass);
+    return new ConvertInterfaceToClassIntention(aClass).asIntention();
   }
 
   @Override
   @Nullable
   public IntentionAction createUnwrapArrayInitializerMemberValueAction(@NotNull PsiArrayInitializerMemberValue arrayValue) {
-    return UnwrapArrayInitializerMemberValueAction.createFix(arrayValue);
+    UnwrapArrayInitializerMemberValueAction fix = UnwrapArrayInitializerMemberValueAction.createFix(arrayValue);
+    return fix == null ? null : fix.asIntention();
   }
 
   @Override
@@ -1113,7 +1120,7 @@ public final class QuickFixFactoryImpl extends QuickFixFactory {
 
   @Override
   public @NotNull IntentionAction createDeleteSwitchLabelFix(@NotNull PsiCaseLabelElement labelElement) {
-    return new DeleteSwitchLabelFix(labelElement, false);
+    return new DeleteSwitchLabelFix(labelElement, false).asIntention();
   }
 
   @Override
@@ -1146,7 +1153,7 @@ public final class QuickFixFactoryImpl extends QuickFixFactory {
   @Override
   public @NotNull IntentionAction createMoveSwitchBranchUpFix(@NotNull PsiCaseLabelElement moveBeforeLabel,
                                                               @NotNull PsiCaseLabelElement labelElement) {
-    return new MoveSwitchBranchUpFix(moveBeforeLabel, labelElement);
+    return new MoveSwitchBranchUpFix(moveBeforeLabel, labelElement).asIntention();
   }
 
   @Override
@@ -1156,12 +1163,12 @@ public final class QuickFixFactoryImpl extends QuickFixFactory {
 
   @Override
   public @NotNull IntentionAction createSetVariableTypeFix(@NotNull PsiVariable variable, @NotNull PsiType type) {
-    return new SetVariableTypeFix(variable, type);
+    return new SetVariableTypeFix(variable, type).asIntention();
   }
 
   @Override
   public @NotNull IntentionAction createReceiverParameterNameFix(@NotNull PsiReceiverParameter parameter, @NotNull String newName) {
-    return new ReceiverParameterNameFix(parameter, newName);
+    return new ReceiverParameterNameFix(parameter, newName).asIntention();
   }
 
   @Override
@@ -1172,7 +1179,12 @@ public final class QuickFixFactoryImpl extends QuickFixFactory {
 
   @Override
   public @NotNull IntentionAction createConvertAnonymousToInnerAction(@NotNull PsiAnonymousClass anonymousClass) {
-    return new MoveAnonymousToInnerFix(anonymousClass);
+    return new MoveAnonymousOrLocalToInnerFix(anonymousClass);
+  }
+
+  @Override
+  public @NotNull IntentionAction createConvertLocalToInnerAction(@NotNull PsiClass localClass) {
+    return new MoveAnonymousOrLocalToInnerFix(localClass);
   }
 
   private final static class RemoveRedundantLambdaParameterTypesFix extends RemoveRedundantParameterTypesFix {
@@ -1191,7 +1203,7 @@ public final class QuickFixFactoryImpl extends QuickFixFactory {
 
   @Override
   public @NotNull IntentionAction createSplitSwitchBranchWithSeveralCaseValuesAction() {
-    return new SplitSwitchBranchWithSeveralCaseValuesAction();
+    return new SplitSwitchBranchWithSeveralCaseValuesAction().asIntention();
   }
 
   @Override
@@ -1201,6 +1213,11 @@ public final class QuickFixFactoryImpl extends QuickFixFactory {
 
   @Override
   public @NotNull IntentionAction createDeleteFix(@NotNull PsiElement @NotNull [] elements, @NotNull @Nls String text) {
-    return new DeleteElementFix.DeleteMultiFix(elements, text);
+    return new DeleteElementFix.DeleteMultiFix(elements, text).asIntention();
+  }
+
+  @Override
+  public @NotNull IntentionAction createAddMainMethodFix(@NotNull PsiUnnamedClass unnamedClass) {
+    return new AddMainMethodFix(unnamedClass).asIntention();
   }
 }
