@@ -1,11 +1,10 @@
 // Copyright 2000-2023 JetBrains s.r.o. and contributors. Use of this source code is governed by the Apache 2.0 license.
 package com.intellij.openapi.vfs.newvfs.persistent;
 
-import com.intellij.openapi.util.io.FileUtil;
-import com.intellij.openapi.util.io.FileUtilRt;
-import com.intellij.openapi.vfs.LocalFileSystem;
-import com.intellij.openapi.vfs.VirtualFile;
-import com.intellij.openapi.vfs.VirtualFileWithId;
+import com.intellij.openapi.vfs.newvfs.ChildInfoImpl;
+import com.intellij.openapi.vfs.newvfs.events.ChildInfo;
+import com.intellij.openapi.vfs.newvfs.persistent.PersistentFS.Flags;
+import it.unimi.dsi.fastutil.ints.IntArrayList;
 import org.jetbrains.annotations.NotNull;
 import org.openjdk.jmh.annotations.*;
 import org.openjdk.jmh.runner.Runner;
@@ -13,113 +12,155 @@ import org.openjdk.jmh.runner.RunnerException;
 import org.openjdk.jmh.runner.options.Options;
 import org.openjdk.jmh.runner.options.OptionsBuilder;
 
-import java.io.File;
 import java.io.IOException;
-import java.lang.reflect.Field;
-import java.util.Objects;
-import java.util.concurrent.TimeUnit;
+import java.util.ArrayList;
+import java.util.concurrent.ThreadLocalRandom;
 
+import static java.util.concurrent.TimeUnit.NANOSECONDS;
 import static java.util.concurrent.TimeUnit.SECONDS;
+import static org.openjdk.jmh.runner.options.TimeValue.seconds;
 
 /**
  * Benchmarks different approaches to access CHILDREN (file attribute).
  * New API allows raw access to the segment page ByteBuffer, while old API allows only access through InputStream
  * over copied byte[] array.
  */
-@BenchmarkMode({Mode.AverageTime, Mode.SampleTime})
-@OutputTimeUnit(TimeUnit.NANOSECONDS)
-@Warmup(iterations = 3, time = 2, timeUnit = SECONDS)
-@Measurement(iterations = 5, time = 5, timeUnit = SECONDS)
-@Fork(1)
+@BenchmarkMode({Mode.AverageTime/*, Mode.SampleTime*/})
+@OutputTimeUnit(NANOSECONDS)
+@Warmup(iterations = 3, time = 1, timeUnit = SECONDS)
+@Measurement(iterations = 5, time = 2, timeUnit = SECONDS)
+@Fork(3)
+@Threads(4)
+@SuppressWarnings("ClassEscapesDefinedScope")
 public class VFSChildrenAccessBenchmark {
 
-  @State(Scope.Benchmark)
-  public static class Context {
+  public static final int MAX_TREE_DEPTH = 4;
 
-    @Param({"2", "8", "64"})
+
+  @State(Scope.Benchmark)
+  public static abstract class TreeAccessorBenchmark {
+
+    @Param({"16", "64"})
     public int CHILDREN_COUNT = 16;
 
+    public int rootFolderId;
 
-    public File folder;
+    public PersistentFSTreeAccessor treeAccessor;
 
-    public int folderId;
+    @SuppressWarnings("SSBasedInspection")
+    private final IntArrayList foldersIds = new IntArrayList();
 
-    public PersistentFSTreeAccessor oldTreeAccessor;
-    public PersistentFSTreeRawAccessor newTreeAccessor;
+    protected abstract PersistentFSTreeAccessor createTreeAccessor(FSRecordsImpl vfs) throws IOException;
 
     @Setup
-    public void setup(final ApplicationContext applicationContext) throws Exception {
-      folder = FileUtil.createTempDirectory("VFSChildrenAccessBenchmark", "tst", /*deleteOnExit: */ true);
-      CHILDREN_COUNT = 16;
+    public void setup(FSRecordsContext vfsContext) throws Exception {
+      FSRecordsImpl vfs = vfsContext.vfs();
+
+      treeAccessor = createTreeAccessor(vfs);
+
+      rootFolderId = vfs.createRecord();
+      vfs.setFlags(rootFolderId, Flags.IS_DIRECTORY);
+      attachChildren(vfs, rootFolderId, 1, MAX_TREE_DEPTH);
+    }
+
+    protected void attachChildren(FSRecordsImpl vfs,
+                                  int folderId,
+                                  int depth,
+                                  int maxDepth) throws IOException {
+      foldersIds.add(folderId);
+      boolean leafLevel = (depth == maxDepth);
+      PersistentFSRecordsStorage records = vfs.connection().getRecords();
+      ArrayList<ChildInfo> childrenInfos = new ArrayList<>();
       for (int i = 0; i < CHILDREN_COUNT; i++) {
-        FileUtil.createTempFile(folder, "1", ".tst", true);
+        int childId = vfs.createRecord();
+
+        vfs.setParent(childId, folderId);
+
+        int nameId;
+        if (!leafLevel) {
+          vfs.setFlags(childId, Flags.IS_DIRECTORY);
+          attachChildren(vfs, childId, depth + 1, maxDepth);
+          String childName = "dir" + i;
+          nameId = vfs.getNameId(childName);
+        }
+        else {
+          String childName = "file" + i;
+          nameId = vfs.getNameId(childName);
+        }
+
+        records.setNameId(childId, nameId);
+
+        childrenInfos.add(new ChildInfoImpl(
+          childId,
+          nameId,
+          null, null, null
+        ));
       }
-
-
-      final VirtualFile vFile = refreshAndFind(folder);
-      folderId = ((VirtualFileWithId)vFile).getId();
-
-      final Field implField = FSRecords.class.getDeclaredField("impl");
-      final Field attributeAccessorField = FSRecordsImpl.class.getDeclaredField("attributeAccessor");
-      final Field connectionField = FSRecordsImpl.class.getDeclaredField("connection");
-      implField.setAccessible(true);
-      connectionField.setAccessible(true);
-      attributeAccessorField.setAccessible(true);
-
-      final FSRecordsImpl impl = (FSRecordsImpl)implField.get(null);
-      final PersistentFSConnection connection = (PersistentFSConnection)connectionField.get(impl);
-      final PersistentFSAttributeAccessor attributeAccessor = (PersistentFSAttributeAccessor)attributeAccessorField.get(impl);
-      oldTreeAccessor = new PersistentFSTreeAccessor(attributeAccessor, connection);
-      newTreeAccessor = new PersistentFSTreeRawAccessor(attributeAccessor, connection);
+      ListResult children = new ListResult(vfs.getModCount(folderId), childrenInfos, folderId);
+      treeAccessor.doSaveChildren(folderId, children);
     }
 
-    @TearDown
-    public void tearDown() throws Exception {
-      if (folder != null) {
-        FileUtilRt.deleteRecursively(folder.toPath());
-      }
-      //FIXME RC: EDT is not stopped, hence JMH can't terminate forked JVM.
+    protected int tossFolderId() {
+      ThreadLocalRandom rnd = ThreadLocalRandom.current();
+      int randomIndex = rnd.nextInt(foldersIds.size());
+      return foldersIds.getInt(randomIndex);
     }
 
-    @NotNull
-    private static VirtualFile refreshAndFind(final @NotNull File file) {
-      return Objects.requireNonNull(LocalFileSystem.getInstance().refreshAndFindFileByIoFile(file), file.getPath());
+    @Benchmark
+    public int[] listChildrenIds(FSRecordsContext vfsContext) throws IOException {
+      int folderId = tossFolderId();
+      return treeAccessor.listIds(folderId);
+    }
+
+    @Benchmark
+    public @NotNull ListResult listChildren(FSRecordsContext vfsContext) throws IOException {
+      int folderId = tossFolderId();
+      return treeAccessor.doLoadChildren(folderId);
+    }
+
+    @Benchmark
+    public void updateChildren(FSRecordsContext vfsContext) throws IOException {
+      int folderId = tossFolderId();
+      ListResult children = treeAccessor.doLoadChildren(folderId);
+      treeAccessor.doSaveChildren(folderId, children);
     }
   }
 
-  @Benchmark
-  public int[] listChildrenIds_old(final ApplicationContext application,
-                                   final Context context) throws IOException {
-    return context.oldTreeAccessor.listIds(context.folderId);
+  @State(Scope.Benchmark)
+  public static class LegacyTreeAccessorBenchmark extends TreeAccessorBenchmark {
+    @Override
+    protected PersistentFSTreeAccessor createTreeAccessor(FSRecordsImpl vfs) {
+      return new PersistentFSTreeAccessor(vfs.attributeAccessor(), vfs.recordAccessor(), vfs.connection());
+    }
   }
 
-  @Benchmark
-  public int[] listChildrenIds_new(final ApplicationContext application,
-                                   final Context context) throws IOException {
-    return context.newTreeAccessor.listIds(context.folderId);
+  @State(Scope.Benchmark)
+  public static class RawTreeAccessorBenchmark extends TreeAccessorBenchmark {
+    @Override
+    protected PersistentFSTreeAccessor createTreeAccessor(FSRecordsImpl vfs) {
+      return new PersistentFSTreeRawAccessor(vfs.attributeAccessor(), vfs.recordAccessor(), vfs.connection());
+    }
   }
 
 
-  public static void main(final String[] args) throws RunnerException {
-    final Options opt = new OptionsBuilder()
-      .jvmArgs("--add-opens=java.base/java.lang=ALL-UNNAMED",
-               "--add-opens=java.base/java.util=ALL-UNNAMED",
-               "--add-opens=java.desktop/java.awt=ALL-UNNAMED",
-               "--add-opens=java.desktop/sun.awt=ALL-UNNAMED",
-               "--add-opens=java.desktop/sun.font=ALL-UNNAMED",
-               "--add-opens=java.desktop/java.awt.event=ALL-UNNAMED",
-
-               //to enable 'new' API:
-               "-Dvfs.lock-free-impl.enable=true",
-               "-Dvfs.lock-free-impl.fraction-direct-memory-to-utilize=0.5",
-               "-Dvfs.use-streamlined-attributes-storage=true"
+  public static void main(String[] args) throws RunnerException {
+    Options opt = new OptionsBuilder()
+      .jvmArgs(
+        //to enable 'new' API:
+        //"-Dvfs.lock-free-impl.enable=true",
+        //"-Dvfs.lock-free-impl.fraction-direct-memory-to-utilize=0.5",
       )
       //.mode(Mode.SingleShotTime)
       //.warmupIterations(1000)
       //.warmupBatchSize(1000)
       //.measurementIterations(1000)
-      .include(VFSChildrenAccessBenchmark.class.getSimpleName() + ".*")
-      .threads(1)
+      .include(VFSChildrenAccessBenchmark.class.getSimpleName() + ".*TreeAccessor.*")
+      .threads(4)
+      .forks(2)
+      .mode(Mode.AverageTime)
+      .timeUnit(NANOSECONDS)
+      .warmupIterations(2).warmupTime(seconds(1))
+      .measurementIterations(3).measurementTime(seconds(2))
       .build();
 
     new Runner(opt).run();
